Fix content sidebar wrap top margin on Sections

--- a/assets/css/mai-theme.css
+++ b/assets/css/mai-theme.css
@@ -869,6 +869,7 @@ td {
 }
 
 .mai-sections .content-sidebar-wrap {
+	margin-top: 0;
 	margin-bottom: 0;
 }
 
